# game-of-life

./: .gitignore  CMakeLists.txt  Makefile  README.md  game_of_life.c  game_of_life.h  main.c
cuda/: build.sh  cudaJob.e81511  cudaJob.e81512  cudaJob.e81513  cudaJob.e81514  cudaJob.e81515  cudaJob.e81516  cudaJob.e81517  cudaJob.e81518  cudaJob.e81519  cudaJob.e81520  cudaJob.e81522  cudaJob.e81523  cudaJob.e81524  cudaJob.e81525  cudaJob.e81526  cudaJob.e81527  cudaJob.e81528  cudaJob.e81529  cudaJob.e81530  cudaJob.e81531  cudaJob.e81532  cudaJob.e81533  cudaJob.e81534  cudaJob.e81535  cudaJob.e81536  cudaJob.e81537  cudaJob.e81538  cudaJob.e81539  cudaJob.e81540  cudaJob.e81541  cudaJob.e81542  cudaJob.e81543  cudaJob.e81544  cudaJob.e81545  cudaJob.e81546  cudaJob.e81547  cudaJob.e81548  cudaJob.e81549  cudaJob.e81550  (+56 more)
mpi/: Makefile  efficiency.1920x1920.txt  efficiency.320x320.txt  efficiency.640x640.txt  efficiency.7680x7680.txt  game_of_life.c  game_of_life.h  golJob_16_1920.e72245  golJob_16_1920.o72245  golJob_16_320.e72237  golJob_16_320.o72237  golJob_16_640.e72241  golJob_16_640.o72241  golJob_16_7680.e72249  golJob_16_7680.o72249  golJob_1_1920.e72243  golJob_1_1920.o72243  golJob_1_320.e72235  golJob_1_320.o72235  main.c  (+32 more)
mpi+openmp/: efficiency.1280x1280.txt  efficiency.2560x2560.txt  efficiency.320x320.txt  efficiency.5120x5120.txt  efficiency.640x640.txt  game_of_life.h  golJob_p16_t16_dims1280.e84743  golJob_p16_t16_dims1280.o84743  golJob_p16_t16_dims2560.e84750  golJob_p16_t16_dims2560.o84750  golJob_p16_t16_dims320.e84728  golJob_p16_t16_dims320.o84728  golJob_p16_t16_dims5120.e84778  golJob_p16_t16_dims5120.o84778  golJob_p16_t16_dims640.e84733  golJob_p16_t16_dims640.o84733  golJob_p16_t1_dims1280.e84389  golJob_p16_t1_dims1280.o84389  golJob_p16_t1_dims2560.e84396  golJob_p16_t1_dims2560.o84396  golJob_p16_t1_dims320.e84381  golJob_p16_t1_dims320.o84381  golJob_p16_t1_dims5120.e84483  golJob_p16_t1_dims5120.o84483  golJob_p16_t1_dims640.e84385  golJob_p16_t1_dims640.o84385  golJob_p16_t2_dims1280.e84545  golJob_p16_t2_dims1280.o84545  golJob_p16_t2_dims2560.e84591  golJob_p16_t2_dims2560.o84591  golJob_p16_t2_dims320.e84497  golJob_p16_t2_dims320.o84497  golJob_p16_t2_dims5120.e84624  golJob_p16_t2_dims5120.o84624  golJob_p16_t2_dims640.e84541  golJob_p16_t2_dims640.o84541  golJob_p16_t4_dims1280.e84659  golJob_p16_t4_dims1280.o84659  golJob_p16_t4_dims2560.e84670  golJob_p16_t4_dims2560.o84670  (+183 more)
(+182 files in other folders)
